--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
     <script src="pixelEditor.js"></script>
+    <script src="imageFlipper.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
