--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <script src="pixelEditor.js"></script>
     <script src="imageFlipper.js"></script>
+    <script src="rotation.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
